# singularix-rspi

./: .env_example  .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: main.rs
src/ble_connector/: ble_response_converter.rs  led_manager.rs  mod.rs
src/controllers/: ble_status.rs  mod.rs  set_single_color.rs
src/controllers/led/: brightness.rs  events.rs  mod.rs  rainbow.rs  range.rs  send_text.rs  single_color.rs
src/service/: env.rs  utils.rs
