[package]
name = "singularix-rspi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bluer = { version = "0.17.4", features = ["full"] }
futures = "0.3.31"
tokio = { version = "1.49.0", features = ["full"] }
uuid = "1.19.0"
libdbus-sys = { version = "0.2.7", features = ["vendored"] }
tokio-stream = "0.1.18"
pin-utils = "0.1.0"
actix-web = "4.12.1"
serde = "1.0.228"
serde_json = "1.0.148"
actix-cors = "0.7.1"
dotenvy = "0.15"